--- a/ConcreteCloud/PProcess3Cell.xib
+++ b/ConcreteCloud/PProcess3Cell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="380"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3Zc-zo-cvF" id="BcM-bx-50H">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="379"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="379.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="47H-km-H39">
@@ -155,6 +155,7 @@
             <connections>
                 <outlet property="btnDetail" destination="QZ0-54-JWP" id="KE5-SS-0yg"/>
                 <outlet property="ivProcess" destination="72Y-nz-OlB" id="79V-A2-7Gt"/>
+                <outlet property="ivVehicle" destination="mDU-we-c6X" id="oVZ-wH-clu"/>
                 <outlet property="lbDate" destination="Sse-s6-kd5" id="QGg-85-7QD"/>
                 <outlet property="lbProcess" destination="VOg-rH-wBG" id="zyv-tJ-uag"/>
                 <outlet property="lbTitle" destination="Djg-yJ-9B9" id="nBb-nP-oNI"/>
