--- a/ConcreteCloud/TaluoduCell.xib
+++ b/ConcreteCloud/TaluoduCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wbJ-C4-TSr" id="sXq-Qg-roP">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="49.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="塌落度" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iJj-fd-LaC">
@@ -28,14 +28,14 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_down.png" translatesAutoresizingMaskIntoConstraints="NO" id="uXF-Zj-bwy">
-                        <rect key="frame" x="211" y="12" width="25" height="25"/>
+                        <rect key="frame" x="219" y="12" width="20" height="25"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="25" id="EdS-AP-noi"/>
+                            <constraint firstAttribute="width" constant="20" id="EdS-AP-noi"/>
                             <constraint firstAttribute="height" constant="25" id="oC1-dB-iQa"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2k2-nj-rrz">
-                        <rect key="frame" x="166" y="12" width="45" height="25"/>
+                        <rect key="frame" x="166" y="12" width="53" height="25"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="25" id="Xmf-Wt-3Tb"/>
                         </constraints>
@@ -44,14 +44,14 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_down.png" translatesAutoresizingMaskIntoConstraints="NO" id="Cub-KY-qKQ">
-                        <rect key="frame" x="302" y="12" width="25" height="25"/>
+                        <rect key="frame" x="312" y="12" width="20" height="25"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="25" id="F7r-pJ-HCp"/>
-                            <constraint firstAttribute="width" constant="25" id="Geg-Zs-PhR"/>
+                            <constraint firstAttribute="width" constant="20" id="Geg-Zs-PhR"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NiL-ac-nNt">
-                        <rect key="frame" x="257" y="12" width="45" height="25"/>
+                        <rect key="frame" x="259" y="12" width="53" height="25"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="25" id="pvF-h5-oqV"/>
                         </constraints>
@@ -60,19 +60,19 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="±" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PWL-tC-Ud3">
-                        <rect key="frame" x="236" y="14" width="21" height="21"/>
+                        <rect key="frame" x="239" y="14.5" width="20" height="20"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="lLK-Hv-OE1"/>
-                            <constraint firstAttribute="width" constant="21" id="tvr-if-hZp"/>
+                            <constraint firstAttribute="height" constant="20" id="lLK-Hv-OE1"/>
+                            <constraint firstAttribute="width" constant="20" id="tvr-if-hZp"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="mm" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mo3-tn-avS">
-                        <rect key="frame" x="327" y="14" width="40" height="21"/>
+                        <rect key="frame" x="332" y="14" width="35" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="40" id="LYn-jH-HjV"/>
+                            <constraint firstAttribute="width" constant="35" id="LYn-jH-HjV"/>
                             <constraint firstAttribute="height" constant="21" id="e1o-Od-FsK"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
