--- a/ConcreteCloud/HzsInfoView.xib
+++ b/ConcreteCloud/HzsInfoView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -120,6 +120,14 @@
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <state key="normal" title="向搅拌站下单"/>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="seC-Vj-Q6f">
+                    <rect key="frame" x="194" y="8" width="25" height="25"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="25" id="ZC3-If-QFb"/>
+                        <constraint firstAttribute="height" constant="25" id="Zl8-R8-MRG"/>
+                    </constraints>
+                    <state key="normal" image="close.png"/>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
@@ -154,8 +162,10 @@
                 <constraint firstItem="CPk-2v-c1s" firstAttribute="leading" secondItem="qNE-RX-Nsr" secondAttribute="trailing" constant="8" id="VIJ-3d-EI2"/>
                 <constraint firstItem="Lta-Ur-Ag6" firstAttribute="centerX" secondItem="nBb-46-0xf" secondAttribute="centerX" id="Vuj-Pk-go4"/>
                 <constraint firstItem="afC-JQ-cXy" firstAttribute="leading" secondItem="sT5-6o-raP" secondAttribute="trailing" constant="8" id="ZXP-8d-x77"/>
+                <constraint firstAttribute="trailing" secondItem="seC-Vj-Q6f" secondAttribute="trailing" constant="8" id="arT-Wg-J85"/>
                 <constraint firstAttribute="trailing" secondItem="7bl-xo-dJJ" secondAttribute="trailing" id="ayf-BE-w9C"/>
                 <constraint firstItem="sT5-6o-raP" firstAttribute="top" secondItem="Q5w-n5-5bJ" secondAttribute="bottom" constant="8" id="b97-ea-Lol"/>
+                <constraint firstItem="seC-Vj-Q6f" firstAttribute="top" secondItem="nBb-46-0xf" secondAttribute="top" constant="8" id="csV-Pl-1Ez"/>
                 <constraint firstAttribute="trailing" secondItem="18w-yb-G07" secondAttribute="trailing" constant="8" id="dah-Pe-tpE"/>
                 <constraint firstItem="Q5w-n5-5bJ" firstAttribute="leading" secondItem="nBb-46-0xf" secondAttribute="leading" constant="8" id="deQ-Li-DZ1"/>
                 <constraint firstItem="qNE-RX-Nsr" firstAttribute="top" secondItem="sT5-6o-raP" secondAttribute="bottom" constant="8" id="grg-Ke-KRm"/>
@@ -177,6 +187,7 @@
             <connections>
                 <outlet property="addHeight" destination="bkL-8W-Bcp" id="NIb-II-frg"/>
                 <outlet property="btn" destination="Lta-Ur-Ag6" id="3Ys-Jx-KAt"/>
+                <outlet property="btnClose" destination="seC-Vj-Q6f" id="hPJ-QK-D69"/>
                 <outlet property="lbAddress" destination="afC-JQ-cXy" id="OSE-uO-fEW"/>
                 <outlet property="lbContactTel" destination="csh-W2-xdt" id="7Md-5z-TIr"/>
                 <outlet property="lbContactUser" destination="18w-yb-G07" id="lBX-M5-XC7"/>
@@ -187,6 +198,7 @@
         </view>
     </objects>
     <resources>
+        <image name="close.png" width="64" height="64"/>
         <image name="icon_info_window.png" width="350" height="238"/>
     </resources>
 </document>
