--- a/ConcreteCloud/TitleSegmentView.xib
+++ b/ConcreteCloud/TitleSegmentView.xib
@@ -1,55 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="TitleSegmentView">
+            <rect key="frame" x="0.0" y="0.0" width="160" height="30"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OrV-Xj-kTk" customClass="TitleSegmentView">
-                    <rect key="frame" x="98" y="20" width="200" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dAr-tC-ZeU">
-                            <rect key="frame" x="10" y="5" width="80" height="21"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <state key="normal" title="进行中">
-                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                        </button>
-                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xg8-Rf-T3G">
-                            <rect key="frame" x="100" y="0.0" width="1" height="30"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        </view>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lVD-i9-pIG">
-                            <rect key="frame" x="110" y="5" width="80" height="21"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <state key="normal" title="历史订单">
-                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                        </button>
-                    </subviews>
-                    <color key="tintColor" red="0.1137254902" green="0.63529411759999999" blue="0.90196078430000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <connections>
-                        <outlet property="btnLeft" destination="dAr-tC-ZeU" id="T6l-hn-yoV"/>
-                        <outlet property="btnRight" destination="lVD-i9-pIG" id="AL8-tP-lwB"/>
-                    </connections>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xg8-Rf-T3G">
+                    <rect key="frame" x="79.5" y="0.0" width="1" height="30"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="1" id="eJc-hH-jPH"/>
+                    </constraints>
                 </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lVD-i9-pIG">
+                    <rect key="frame" x="80.5" y="4.5" width="80" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="8Sj-9u-74x"/>
+                        <constraint firstAttribute="width" constant="80" id="UDz-KH-IsW"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <state key="normal" title="历史订单">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dAr-tC-ZeU">
+                    <rect key="frame" x="-0.5" y="4.5" width="80" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="f5C-bt-5Tx"/>
+                        <constraint firstAttribute="width" constant="80" id="krv-ET-2tH"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <state key="normal" title="进行中">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                </button>
             </subviews>
-            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-            <point key="canvasLocation" x="25.5" y="51.5"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="Xg8-Rf-T3G" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="ALk-D4-9Bx"/>
+                <constraint firstAttribute="bottom" secondItem="Xg8-Rf-T3G" secondAttribute="bottom" id="EVe-pP-V2W"/>
+                <constraint firstItem="dAr-tC-ZeU" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Eft-l4-4WF"/>
+                <constraint firstItem="lVD-i9-pIG" firstAttribute="leading" secondItem="Xg8-Rf-T3G" secondAttribute="trailing" id="QLH-MM-ba8"/>
+                <constraint firstItem="Xg8-Rf-T3G" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="V6n-Ax-BqB"/>
+                <constraint firstItem="Xg8-Rf-T3G" firstAttribute="leading" secondItem="dAr-tC-ZeU" secondAttribute="trailing" id="jAb-UZ-eyj"/>
+                <constraint firstItem="lVD-i9-pIG" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="zid-ey-fIg"/>
+            </constraints>
+            <nil key="simulatedStatusBarMetrics"/>
+            <nil key="simulatedTopBarMetrics"/>
+            <nil key="simulatedBottomBarMetrics"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="btnLeft" destination="dAr-tC-ZeU" id="e6P-10-C8U"/>
+                <outlet property="btnRight" destination="lVD-i9-pIG" id="nNG-md-fR1"/>
+            </connections>
+            <point key="canvasLocation" x="25" y="51"/>
         </view>
     </objects>
 </document>
